--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title></title>
 </head>
 <body>
-    <script>
-location.href = 'https://github.com/onface'
-    </script>
+    <a href="https://github.com/onface">https://github.com/onface</a>
 </body>
 </html>
