--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title></title>
 </head>
 <body>
-    <a href="https://github.com/onface">https://github.com/onface</a>
+    <ol>
+        <li><a href="./Vue-Essentials-Cheat-Sheet.pdf">Vue essentials cheat-sheet</a></li>
+    </ol>
 </body>
 </html>
